# ObjectVM

./: .clangformat  .gitignore  .travis.yml  CMakeLists.txt  README.md
assembler/: Pipfile  package.json  tsconfig.json  tslint.json
assembler/assembler/: assembler.py  chars.py  float.py  funcref.py  funcsettings.py  instruction.py  instructionargument.py  instructionparser.py  int.py  lexeme.py  lexemeassembler.py  linetokenizer.py  metainstruction.py  metainstructionparser.py  metakeyword.py  opcode.py  parser.py  size.py  sizes.py  tokenassembler.py
assembler/assembler/analysis/: bytecoderesolver.py  ovmclass.py  ovmfunction.py  programcontext.py  programgenerator.py
assembler/assembler/parsing/: chars.py  instruction.py  instructionargument.py  instructionparser.py  lexemeassembler.py  linetokenizer.py  metainstruction.py  metainstructionparser.py  metakeyword.py  parser.py  token.py
assembler/programs/: example.oasm
assembler/src/: Coordinate.ts  Program.ts  assembler.py  char.py  chars.py  index.ts  lexeme.py  lineparser.py  linetokenizer.py  metainstruction.py  metainstructionparser.py  metakeyword.py  parser.py  token.py  tokenassembler.py  type.py
assembler/src/emitter/: Byte.ts  ByteArray.ts  IEmitter.ts  IWriter.ts  ProgramEmitter.ts
assembler/src/emitter/emitters/: ArgumentEmitter.ts  ArgumentEmitterVisitor.ts  ClassObjectEmitter.ts  GlobalsEmitter.ts  InstructionEmitter.ts  IntegerEmitter.ts  NumericEmitter.ts  OpcodeEmitter.ts  ProgramEmitter.ts  StaticFunctionEmitter.ts  UnsignedIntegerEmitter.ts
assembler/src/emitter/serialisers/: NumericSerialiser.ts
assembler/src/emitter/writers/: BufferedWriter.ts
assembler/src/language/: Argument.ts  Byte.ts  Instruction.ts  InstructionPrototype.ts  Line.ts
assembler/src/language/arguments/: IntArgument.ts
assembler/src/language/domain/: Argument.ts  ClassObject.ts  ClassObjectReference.ts  Function.ts  FunctionReference.ts  GlobalFunctionContext.ts  Instruction.ts  InstructionPrototype.ts  Integer.ts  MetaInstruction.ts  Numeric.ts  Opcode.ts  Program.ts  UnsignedInteger.ts
assembler/src/language/math/: Numbers.ts  Size.ts
assembler/src/language/types/: Integer.ts  UnsignedInteger.ts
assembler/src/math/: Range.ts
assembler/src/math/__tests__/: Range.test.ts
assembler/src/parser/: ArgumentParser.ts  FromEnumOpcodeParser.ts  IKeywordParser.ts  Line.ts  ParseError.ts  ParsedInstruction.ts  ParsedLine.ts  ParsedProgram.ts  Parser.ts  TokenReader.ts
assembler/src/parser/parsers/: FromEnumMetaInstructionTypeParser.ts  FromEnumOpcodeParser.ts
assembler/src/tokenizer/: Char.ts  Chars.ts  Lexeme.ts  LineReader.ts  ParseError.ts  ParsedToken.ts  ProgramSource.ts  SyntaxError.ts  Token.ts  TokenizedLine.ts  TokenizedProgram.ts  Tokenizer.ts
assembler/src/utils/: IncrementalNumberGenerator.ts
assembler/test/: expect.py  test_char.py  test_lineparser.py  test_metainstructionparser.py
src/: CMakeLists.txt  main.c
src/ovm/: obytecode.c  obytecode.h  odictionary.c  odictionary.h  oexecutor.c  oexecutor.h  oexecutor_int.c  oexecutor_int.h  oflag.h  omath.c  omath.h  omemory.c  omemory.h  oobject.c  oobject.h  oops.h  ostack.c  ostack.h  ostate.h  otypes.h  ovm.c  ovm.h  ovmbytecode.c  ovmbytecode.h  ovmexecutor.c  ovmexecutor.h  ovmexecutor_int.c  ovmexecutor_int.h  ovmexecutor_invoke.c  ovmexecutor_invoke.h  ovmflag.h  ovminvoke.c  ovminvoke.h  ovmmath.c  ovmmath.h  ovmmemory.c  ovmmemory.h  ovmobject.c  ovmobject.h  ovmops.h  (+7 more)
test/: CMakeLists.txt  test_obytecode.c  test_odictionary.c  test_omath.c  test_omemory.c  test_oobject.c  test_ovmbytecode.c  test_ovmmath.c  test_ovmmemory.c  test_ovmobject.c
(+17 files in other folders)
